--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Coding Bootcamp Student at UCI, part time Server at resturaunt</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Southern California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Surfing, Skating, and Videogames</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Working as a software engineer at a firm</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Ladera Ranch</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Get a foot in the door with finance related software engineering</p>
     </section>
 
     <footer id="footer">
